Update product descriptions and images in index.html

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   },
   {
     name: "Eyeshadow Palette",
-    description: "12 stunning shades for limitless eye looks — from soft glam to bold and fierce.",
+    description: "stunning shades for limitless eye looks — from soft glam to bold and fierce.",
     price: 1999,
     image: "https://i.pinimg.com/originals/1d/ab/48/1dab48ed4c8535d0a9d5578ecbe0d3cb.jpg"
   },
@@ -198,19 +198,19 @@
     name: "Highlighter",
     description: "Glow like a goddess with this ultra-reflective, silky highlighter that catches every light.",
     price: 2499,
-    image: "https://cdn.shopify.com/s/files/1/0283/0185/2747/products/rarebeautypositive-light-silky-touch-highlighter-27311084209371_1200x1200.jpg?v=1670877968"
+    image: "https://assets.dailybreak.com/85e96b27-7ad4-44f2-a5ed-7c645a245f50"
   },
   {
     name: "Matte Lipstick",
     description: "Rich pigment and soft-matte texture — your lips stay bold, beautiful, and kiss-ready.",
     price: 1599,
-    image: "https://cdn.shopify.com/s/files/1/0565/8021/0862/files/fenty_beauty_matte_lipstick.jpg?v=1697478822"
+    image: "https://i.pinimg.com/originals/e2/d8/9c/e2d89c54588bb193a01e0e27ab457223.jpg"
   },
   {
     name: "Mascara",
     description: "Lengthen, volumize, and lift every lash for that dramatic, eye-opening finish.",
     price: 799,
-    image: "https://images.unsplash.com/photo-1589984662646-e7b2e4962f87"
+    image: "https://img.watsonsvn.com/ecommerce/ecom/Maybelline/Maybelline-Lash-Sensational-Sky-High-Mascara-6ml-2.jpg"
   }
 ];
 
